--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "axios": "^1.7.8",
     "chart.js": "^4.4.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "firebase": "^11.0.1",
+    "mongoose": "^8.8.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
