--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "chart.js": "^4.4.7",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "firebase": "^11.0.1",
-    "mongoose": "^8.8.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "mongoose": "^8.9.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
